remove z-index and fix blur above

--- a/src/src/style.css
+++ b/src/src/style.css
@@ -463,7 +463,6 @@ textarea {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1;
 }
 
 @media screen and (max-width: 600px) {
